--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -2,4 +2,5 @@ FROM nginx:alpine
 
 COPY . /usr/share/nginx/html
 
-EXPOSE 89
+EXPOSE 80 
+# Я короче оказывается ваще не поняла зачем нужен expose, а потом мне как объяснили и я осознала свою ошибку
